--- a/simple-todos/simple-todos.css
+++ b/simple-todos/simple-todos.css
@@ -1,7 +1,6 @@
 body {
 	font-family: sans-serif;
-	background-color: #315481;
-	background-image: linear-gradient(to bottom, #d0edf5, #E5F2F5 100%);
+	background-color: #BEE3ED;
 	background-attachment: fixed;
 
 	position: absolute;
@@ -20,7 +19,7 @@ body {
 	max-width: 600px;
 	margin: 0 auto;
 	min-height: 100%;
-	background: white;
+	background: #F8F8F8;
 }
 
 header {
@@ -43,8 +42,8 @@ h1 {
 }
 
 form {
-	margin-top: 10px;
-	margin-bottom: -10px;
+	margin-top: 5px;
+	margin-bottom: 5px;
 	position: relative;
 }
 
