--- a/foosboom-chapter3/client/views/game.html
+++ b/foosboom-chapter3/client/views/game.html
@@ -1,7 +1,26 @@
 <template name="game">
 	<li class="divider list-group-item">
-		{{teams.[0].name}}
-		vs
-		{{teams.[1].name}}
+		{{#if completed}}
+			{{teams.[0].name}} ({{teams.[0].score}})
+			vs
+			{{teams.[1].name}} ({{teams.[1].score}})
+		{{else}}
+
+			{{teams.[0].name}} (
+				<a href="#" class="score" data-inc="-1" data-index="0">-</a>
+				{{teams.[0].score}}
+				<a href="#" class="score" data-inc="1" data-index="0">+</a>
+			)
+			vs
+			{{teams.[1].name}} (
+				<a href="#" class="score" data-inc="-1" data-index="1">-</a>
+				{{teams.[1].score}}
+				<a href="#" class="score" data-inc="1" data-index="1">+</a>
+			)
+
+			<a href="#" class="finish-game">Finish</a>
+			<a href="#" class="delete-game">Delete</a>
+
+		{{/if}}
 	</li>
 </template>
